gourmet-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gourmet-db
  name: gourmet-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gourmet-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/springcloud: "true"
        io.kompose.service: gourmet-db
    spec:
      containers:
      - image: gourmet-db:v1
        imagePullPolicy: ""
        name: docker-gourmet-db-mysql
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
