gourmet-db-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert --provider=openshift
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gourmet-db
  name: gourmet-db
spec:
  replicas: 1
  selector:
    io.kompose.service: gourmet-db
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/springcloud: "true"
        io.kompose.service: gourmet-db
    spec:
      containers:
      - image: ' '
        name: docker-gourmet-db-mysql
        resources: {}
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - docker-gourmet-db-mysql
      from:
        kind: ImageStreamTag
        name: gourmet-db:v1
    type: ImageChange
status: {}
