gourmet-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: gourmet-web
  name: gourmet-web
spec:
  ports:
  - name: "5500"
    port: 5500
    targetPort: 80
  selector:
    io.kompose.service: gourmet-web
status:
  loadBalancer: {}
